--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -124,6 +124,7 @@
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Геогр. ширина</string>
     <string name="settings_lon">Геогр. дължина</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC адрес</string>
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Телефонен номер</string>
