--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -124,6 +124,7 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="settings_serial">Seeria#</string>
     <string name="settings_lat">Laiuskraad</string>
     <string name="settings_lon">Pikkuskraad</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC aadress</string>
     <string name="settings_ip">IP aadress</string>
     <string name="settings_phone">Telefoninumber</string>
