--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -124,6 +124,7 @@
     <string name="settings_serial">Σειριακός αριθμός</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">Διεύθυνση MAC</string>
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Αριθμός τηλεφώνου</string>
