--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -123,6 +123,7 @@
     <string name="settings_serial">sarjanumero#</string>
     <string name="settings_lat">Latituudi</string>
     <string name="settings_lon">Longituudi</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC osoite</string>
     <string name="settings_ip">IP osoite</string>
     <string name="settings_phone">Puhelinnumero</string>
