--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -124,6 +124,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">Adresse MAC</string>
     <string name="settings_ip">Adresse IP</string>
     <string name="settings_phone">N° de téléphone</string>
