--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -124,6 +124,7 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="settings_serial">Numero di serie#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">Indirizzo MAC</string>
     <string name="settings_ip">Indirizzo IP</string>
     <string name="settings_phone">Numero di Telefono</string>
