--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -124,6 +124,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">Endereço MAC</string>
     <string name="settings_ip">Endereço IP</string>
     <string name="settings_phone">Número de telefone</string>
