--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -125,6 +125,7 @@
     <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC-адрес</string>
     <string name="settings_ip">IP адрес</string>
     <string name="settings_phone">Номер телефона</string>
