--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -124,6 +124,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Ширина</string>
     <string name="settings_lon">Дужина</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">МЕК адреса</string>
     <string name="settings_ip">IP address</string>
     <string name="settings_phone">Број телефона</string>
