--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -125,6 +125,7 @@
     <string name="settings_serial">Серійний номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Довгота</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC-адреса</string>
     <string name="settings_ip">IP адреса</string>
     <string name="settings_phone">Номер телефону</string>
