--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -132,6 +132,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
+    <string name="settings_alt">Altitude</string>
     <string name="settings_mac">MAC address</string>
     <string name="settings_ip">IP address</string>
     <string name="settings_imei" translatable="false">IMEI</string>
