--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">मदद</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">प्रत्येक</string>
     <string name="menu_restriction_all">प्रतिबंध toggle करे</string>
     <string name="menu_clear_all">सब clear करे</string>
