--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Pomoč</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Vse</string>
     <string name="menu_restriction_all">Preklopi omejitve</string>
     <string name="menu_clear_all">Počisti vse</string>
