--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">مساعدة</string>
     <string name="menu_select_all">إختر الكل</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">تحديد الكل</string>
     <string name="menu_restriction_all">تبديل القيود</string>
     <string name="menu_clear_all">مسح الكل</string>
