--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Nápověda</string>
     <string name="menu_select_all">Vybrat vše</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Vše</string>
     <string name="menu_restriction_all">Přepnout omezení</string>
     <string name="menu_clear_all">Vymazat vše</string>
