--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Hilfe</string>
     <string name="menu_select_all">Alle auswählen</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Alles (beschränkt)</string>
     <string name="menu_restriction_all">Beschränkungen invertieren</string>
     <string name="menu_clear_all">Alles löschen</string>
