--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Ayuda</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Todas</string>
     <string name="menu_restriction_all">Restringir todo</string>
     <string name="menu_clear_all">Permitir todo</string>
