--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Apua</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Kaikki</string>
     <string name="menu_restriction_all">Vaihda rajoitukset</string>
     <string name="menu_clear_all">Clear all</string>
