--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Segítség</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Minden</string>
     <string name="menu_restriction_all">Korlátozások kapcsolása</string>
     <string name="menu_clear_all">Összes törlése</string>
