--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">ヘルプ</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">全て</string>
     <string name="menu_restriction_all">制限の身に切り替え</string>
     <string name="menu_clear_all">Clear all</string>
