--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Help</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sorteer</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Alle</string>
     <string name="menu_restriction_all">Schakel beperkingen</string>
     <string name="menu_clear_all">Alles wissen</string>
