--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Pomocník</string>
     <string name="menu_select_all">Vybrať všetky</string>
     <string name="menu_sort">Zoradiť</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Všetko</string>
     <string name="menu_restriction_all">Prepnúť obmedzenia</string>
     <string name="menu_clear_all">Vymazať všetky</string>
