--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_help">Допомога</string>
     <string name="menu_select_all">Select all</string>
     <string name="menu_sort">Sort</string>
+    <string name="menu_filter">Filter</string>
     <string name="menu_all">Виділити все</string>
     <string name="menu_restriction_all">Переключити довзоли</string>
     <string name="menu_clear_all">Очистити всі</string>
