--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -99,13 +99,6 @@
     <string name="restrict_view">瀏覽器介面</string>
     <string name="title_categories">分類</string>
     <string name="title_restrict">限制項目:</string>
-    <string name="title_filters">篩選器</string>
-
-    <plurals name="title_active_filters">
-        <item quantity="one">使用 1 個篩選器</item>
-        <item quantity="other">使用 %d 個篩選器</item>
-    </plurals>
-
     <string name="title_fused">程式曾取得過資訊</string>
     <string name="title_finternet">程式要求網際網路權限</string>
     <string name="title_fpermission">程式要求手機權限</string>
@@ -119,7 +112,7 @@
     <string name="title_supdated">更新日期</string>
     <string name="title_smodified">修改日期 (XPrivacy)</string>
     <string name="title_sinvert">反序排列</string>
-    <string name="title_allow">允許</string></string>
+    <string name="title_allow">允許</string>
     <string name="title_deny">封鎖</string>
     <string name="title_denyonce">封鎖一次</string>
     <string name="settings_serial">序號</string>
