--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -151,7 +151,7 @@
     <string name="help_attention">可以下载限制规则的应用</string>
     <string name="help_restricted">限制规则已经生效的应用</string>
     <string name="help_shared">已经分享限制规则的应用</string>
-    <string name="tutorial_mainheader">选择权限类别以筛选含有对应权限的应用</string>
+    <string name="tutorial_mainheader">Select the category to restrict</string>
     <string name="tutorial_mainlist">勾选应用后的复选框以限制所选类别的权限\n
 \n被限制的应用请求该权限时会接收到空或伪造的数据\n
 \n点击应用图标以查看详细权限限制规则和设置</string>
