--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -151,7 +151,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="help_attention">má omezení vyžadující pozornost</string>
     <string name="help_restricted">má změněné omezení</string>
     <string name="help_shared">má odeslané omezení</string>
-    <string name="tutorial_mainheader">Zvolte kategorii kterou chcete omezit; Pomocí filtrů vyberte zobrazované aplikace</string>
+    <string name="tutorial_mainheader">Select the category to restrict</string>
     <string name="tutorial_mainlist">Pro omezení zvolené kategorie aplikace stiskněte zaškrtávací pole\n
 \nV rámci omezených kategorií aplikace obdrží prázdné nebo falešné údaje\n
 \nPro rozšířené možnosti omezení stiskněte ikonu aplikace</string>
