--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -151,7 +151,7 @@
     <string name="help_attention">restrictions need attention</string>
     <string name="help_restricted">restrictions are changed</string>
     <string name="help_shared">restrictions are submitted</string>
-    <string name="tutorial_mainheader">Select the category to restrict; choose visible apps with the filters</string>
+    <string name="tutorial_mainheader">Select the category to restrict</string>
     <string name="tutorial_mainlist">Tap a check box to restrict the selected category for an app\n
 \nApps will be fed empty or fake data for restricted categories\n
 \nTap the app icon for detailed restrictions and settings</string>
