--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -151,7 +151,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="help_attention">beperkingen hebben aandacht nodig</string>
     <string name="help_restricted">beperkingen zijn gewijzigd</string>
     <string name="help_shared">beperkingen zijn gestuurd</string>
-    <string name="tutorial_mainheader">Selecteer de te beperken categorie; kies zichtbare apps met de filters</string>
+    <string name="tutorial_mainheader">Selecteer de te beperken categorie</string>
     <string name="tutorial_mainlist">Zet een vinkje om de geselecteerde categorie te beperken voor een app\n
 \nApps worden gevoed met lege of nepgegevens voor beperkte categorieën\n
 \nKlik op het app icoon voor gedetailleerde beperkingen en instellingen</string>
