--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -151,7 +151,7 @@
     <string name="help_attention">mga paghihigpit ay kailangan tingnan</string>
     <string name="help_restricted">mga paghihigpit ay naiba</string>
     <string name="help_shared">mga paghihigpit ay naipasa</string>
-    <string name="tutorial_mainheader">Pumili ng pangkat na pahihigpitan; piliin ang lalantad na iyong apps gamit ang mga pagpipilian na Filter</string>
+    <string name="tutorial_mainheader">Select the category to restrict</string>
     <string name="tutorial_mainlist">Sa tuwing app, lagyan ng Check sa kanang gilid para pahigpitan ang napiling pangkat
 \n\nSa gayon ay ang mga Apps mabibigyan ng wala o pekeng impormasyon ayon sa mga nahigpitan na pangkat
 \n\nPindutin ang App icon sa kaliwang gilid para matignan mabuti tungkol sa kanyang paghihigpit at paglalagay</string>
