--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -140,6 +140,7 @@
     <string name="settings_https">إستخدم الإتصال الآمن</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="help_longpress">Long press name to select</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
