--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -140,6 +140,7 @@
     <string name="settings_https">Benutze sichere Verbindung</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Zeige App Nutzungsdaten (Neustart erforderlich)</string>
+    <string name="help_longpress">Long press name to select</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
