--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -139,6 +139,7 @@
     <string name="settings_https">Sử dụng các kết nối được bảo mật</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="help_longpress">Long press name to select</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có quyền của hệ điều hành</string>
