--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -140,6 +140,7 @@
     <string name="settings_https">使用安全连接(https)</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="help_longpress">Long press name to select</string>
     <string name="help_application">请输入应用名称</string>
     <string name="help_internet">应用含有网络访问权限</string>
     <string name="help_granted">应用已经含有这种权限</string>
